# news-keep-up

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: digest.yml
config/: fde_interview_sources.json  fde_sources.json  sources.json
docs/superpowers/plans/: 2026-07-06-news-keep-up.md
docs/superpowers/specs/: 2026-07-06-news-keep-up-design.md
news_keep_up/: __init__.py  config.py  db.py  digest.py  gemini.py  interview.py  main.py  models.py  prefilter.py  scheduler.py  sources.py  telegram.py  telegram_commands.py  utils.py  vercel_app.py
ops/launchagents/: com.news-keep-up.scheduler-tick.plist
scripts/: trigger_scheduler_tick.py
tests/: test_config.py  test_db.py  test_digest.py  test_gemini.py  test_interview.py  test_prefilter.py  test_scheduler.py  test_sources.py  test_telegram.py  test_telegram_commands.py  test_utils.py  test_vercel_deploy.py
